# mavros_offboard_control

./: README.md
uav_control/: CMakeLists.txt  package.xml
uav_control/include/uav_control/: MarkerPooling.hpp  UAVMarkerTracking.hpp  UAVMotionPrimitive.hpp  UAVWaypointControl.hpp
uav_control/launch/: marker_tracking_by_arya.launch  marker_tracking_by_sansa.launch  motion_primitive.launch  test_marker_tracking.launch  waypoint_control.launch
uav_control/msg/: choice.msg  marker_detection.msg
uav_control/plot/: plot_quad_trajectory.m  plot_quad_trajectory.m~
uav_control/scripts/: IROS2018.py  UserInputMission.py  mission.py  mission_SITL.py  plotGPS.py  px4_mavros.py  rospy  ugv_mission.py  waypoint.py  waypoint.py~  waypointMission1.py  waypointMission1.py~  waypointMission2.py  waypointMission2.py~  waypointMission3.py  waypointMission31.py  waypointMission32.py  waypointMission33.py  waypointMission34.py
uav_control/src/: MarkerPooling.cpp  UAVMarkerTracking.cpp  UAVMotionPrimitive.cpp  UAVSpiralMotion.cpp  UAVWaypointControl.cpp  offb_motion_primitive.cpp  offb_take_off_node.cpp
uav_control/yaml/: motion_primitive_points.yaml  tracking_by_motion_primitive.yaml  waypoint_points.yaml
